--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+## project keys
+basrUrl = https://api.openweathermap.org/data/2.5
+appId = 9b8cb8c7f11c077f8c4e217974d9ee40
